--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <h1>Casse Brique</h1>
   <canvas id="gameCanvas" width="480" height="320"></canvas>
   <div class="controls">
+  <button id="leftBtn">⬅️</button>
+  <button id="rightBtn">➡️</button>
+</div>
     <button onclick="leftPressed = true; setTimeout(() => leftPressed = false, 100)">⬅️</button>
     <button onclick="rightPressed = true; setTimeout(() => rightPressed = false, 100)">➡️</button>
   </div>
