--- a/index.html
+++ b/index.html
@@ -27,5 +27,20 @@
     <button onclick="rightPressed = true; setTimeout(() => rightPressed = false, 100)">➡️</button>
   </div>
   <script src="main.js"></script>
+<script>
+  const leftBtn = document.getElementById("leftBtn");
+  const rightBtn = document.getElementById("rightBtn");
+
+  leftBtn.addEventListener("touchstart", () => leftPressed = true);
+  leftBtn.addEventListener("touchend", () => leftPressed = false);
+  rightBtn.addEventListener("touchstart", () => rightPressed = true);
+  rightBtn.addEventListener("touchend", () => rightPressed = false);
+
+  // Support souris (facultatif pour PC)
+  leftBtn.addEventListener("mousedown", () => leftPressed = true);
+  leftBtn.addEventListener("mouseup", () => leftPressed = false);
+  rightBtn.addEventListener("mousedown", () => rightPressed = true);
+  rightBtn.addEventListener("mouseup", () => rightPressed = false);
+</script>
 </body>
 </html>
