--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
   <meta charset="UTF-8">
   <title>Casse Brique</title>
   <style>
-    canvas { background: #000; display: block; margin: 0 auto; }
-    body { text-align: center; color: white; font-family: sans-serif; }
-    .controls { margin-top: 10px; }
-    button {
-      width: 60px;
-      height: 60px;
-      font-size: 30px;
-      margin: 10px;
-      border-radius: 10px;
-    }
-  </style>
+  canvas { background: #000; display: block; margin: 0 auto; }
+  body { text-align: center; color: white; font-family: sans-serif; }
+
+  .controls {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  button {
+    width: 100px;
+    height: 100px;
+    font-size: 40px;
+    border-radius: 20px;
+    border: none;
+    background-color: #333;
+    color: white;
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+  }
+
+  button:active {
+    background-color: #555;
+  }
+</style>
 </head>
 <body>
   <h1>Casse Brique</h1>
